# TextureCompressionAlgorithmAnalytics

./: CMakeLists.txt  LICENSE.md  README.md  main.cpp
compression/: dxt1.cpp
compression/dxt/: dxt1.cpp  dxt2.cpp
include/dxt/: color_utils.h
output/: Sample-png-image-100kb.png.0.compressed  Sample-png-image-10mb.png.0.compressed  Sample-png-image-1mb.png.0.compressed  Sample-png-image-200kb.png.0.compressed  Sample-png-image-3mb.png.0.compressed  Sample-png-image-500kb.png.0.compressed  Sample-png-image-5mb.png.0.compressed
